# agent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/workflows/: mcp-ci.yml
docs/: CONFIGURATION.md  RULES.md
docs/plans/: 2026-07-20-mcp-ci-demo-design.md  2026-07-20-mcp-ci-demo-implementation.md  2026-07-21-capability-pagination-design.md  2026-07-21-capability-pagination-implementation.md  2026-07-21-ci-reports-suppressions-design.md  2026-07-21-ci-reports-suppressions-implementation.md  2026-07-21-ci-runtime-hardening-design.md  2026-07-21-ci-runtime-hardening-implementation.md  2026-07-21-streamable-http-design.md  2026-07-21-streamable-http-implementation.md  2026-07-21-v1-maintainer-workflow-design.md  2026-07-21-v1-maintainer-workflow-implementation.md
examples/: __init__.py  bad_server.py  good_http_server.py  good_server.py  mcp-ci-baseline.json  mcp-ci-policy.json  mcp-ci.json
scripts/: __init__.py  action_entry.py
src/mcp_ci/: __init__.py  baseline.py  cli.py  config.py  files.py  http_transport.py  models.py  probe.py  reporters.py  rules.py  transport.py
tests/: test_action_entry.py  test_baseline.py  test_cli.py  test_config.py  test_end_to_end.py  test_files.py  test_http_transport.py  test_models.py  test_probe.py  test_reporters.py  test_rules.py  test_transport.py
tests/fixtures/: __init__.py  http_fixture.py  mcp_fixture.py  rpc_fixture.py
