[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-ci-demo"
version = "1.1.0"
description = "Zero-dependency black-box MCP conformance, policy, and metadata drift checks for CI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
keywords = ["mcp", "model-context-protocol", "ci", "security", "conformance"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Testing",
  "Topic :: Security",
]

[project.scripts]
mcp-ci = "mcp_ci.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
